@@ -21,6 +21,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4606: Passing 'None' if ctypes argtype is set to POINTER(...)
+  does now always result in NULL.
+
 - Issue #5042: Structure sub-subclass does now initialize correctly
   with base class positional arguments.
 
